# Gauss_Legendre

./: .gitignore  README.md  gauss_legendre.cpp
cpp/: CMakeLists.txt  README.md  gauss_legendre.cpp
python/: gauss_legendre.py
